# wiseql

./: .gitignore  LICENSE  Makefile  README.md  RECIPE_SPEC.md  RELEASING.md  pyproject.toml
dev-db/: KNOWN_BUGS.md  docker-compose.yml
dev-db/init/: 01_schema_and_seed.sql
docs/: recipe-generator-prompt.md
examples/: daily-volume.toml  null-customers.toml  orphan-returns.toml
examples/sql/: returns.sql
src/wiseql/: __init__.py  cli.py  context.py  project.py  report.py
src/wiseql/ai/: __init__.py  ollama.py  prompts.py  settings.py
src/wiseql/config/: __init__.py  auth.py  connect.py  loader.py  model.py
src/wiseql/engine/: __init__.py  diff.py  execute.py  explorer.py  guard.py  run.py  select.py
src/wiseql/recipes/: __init__.py  dag.py  loader.py  model.py
src/wiseql/tui/: __init__.py  aireview.py  app.py  connections.py  dashboard.py  diff.py  editor.py  explorer.py  params.py  picker.py  projects.py  reports.py  results.py  run.py  settings.py  theme.py  wizard.py
tests/: test_ai_provider.py  test_ai_settings.py  test_checkpoint.py  test_cli.py  test_cli_ai.py  test_cli_conn.py  test_cli_diff.py  test_cli_run.py  test_cli_validate.py  test_config.py  test_context.py  test_diff.py  test_engine.py  test_execute.py  test_explorer.py  test_integration_live.py  test_project.py  test_recipes.py  test_report.py  test_tui.py  test_tui_connections.py  test_tui_dashboard.py  test_tui_editor.py  test_tui_project.py  test_tui_reports.py  test_tui_results.py  test_tui_run.py  test_tui_settings.py
tests/fixtures/broken/: bad_input_ref.toml  both_sql.toml  cycle.toml  no_sql.toml  unknown_field.toml
