[project]
name = "wiseql"
version = "0.0.1"
description = "WiseQL — the wise data browser: run SQL recipes as small, observable, debuggable steps. In development."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Reza Azizi", email = "azizi.ra@gmail.com" }]
license = { text = "MIT" }
keywords = ["sql", "debugging", "tui", "duckdb", "oracle", "data-quality", "pipeline"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Debuggers",
]

[project.urls]
Homepage = "https://wiseql.dev"

[project.scripts]
wiseql = "wiseql:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wiseql"]
