[project]
name = "wiseql"
version = "0.1.0"
description = "WiseQL — the wise data browser: run SQL recipes as small, observable, debuggable steps. In development."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Reza Azizi", email = "azizi.ra@gmail.com" }]
license = { text = "MIT" }
keywords = ["sql", "debugging", "tui", "duckdb", "oracle", "data-quality", "pipeline"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "textual>=1.0",
    "typer>=0.12",
    "pydantic>=2.7",
    "oracledb>=2.4",  # python-oracledb, thin mode — no Oracle Instant Client needed
    "keyring>=25.0",         # OS keychain for connection secrets
    "duckdb>=1.1",           # intermediate engine: step outputs land here, joins run here
]

[project.optional-dependencies]
# AI is an OPTIONAL add-on. The base app must never require these.
# Will hold the Ollama client in Sprint 6: pip install wiseql[ai]
ai = []

[project.urls]
Homepage = "https://wiseql.dev"
Repository = "https://github.com/wiseql/wiseql"
Issues = "https://github.com/wiseql/wiseql/issues"

[project.scripts]
wiseql = "wiseql.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wiseql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
